# financial-data-mcp

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
.streamlit/: config.toml
db/: loader.py
docs/: TROUBLESHOOTING.md  USAGE.md
financial_data_mcp/: __init__.py  _cache.py  _fisis_registry.py  _http.py  _quota.py  _validators.py  dart_client.py  fisis_client.py  server.py
llm/: prompts.py  sql_generator.py
scripts/: excel_to_duckdb.py  preflight.py  verify_lrg_div_mapping.py
tests/: conftest.py  test_cache.py  test_dart_client.py  test_e2e_scenarios.py  test_fisis_client.py  test_http.py  test_quota.py  test_server.py  test_validators.py
