[project]
name = "financial-data-mcp"
version = "0.1.0"
description = "DART(전자공시시스템) & FISIS(금융통계정보시스템) 금융 데이터 MCP 서버"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
financial-data-mcp = "financial_data_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
