[project]
name = "financial-data-mcp"
version = "0.1.0"
description = "DART(전자공시시스템) & FISIS(금융통계정보시스템) 금융 데이터 MCP 서버"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
eval = [
    "plotly>=5.0.0",
    "pandas>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "anthropic>=0.20.0",
]

[project.scripts]
financial-data-mcp = "financial_data_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["financial_data_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
